retrieveUnpackaged/objects/Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Designation__c</fullName>
        <label>Designation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gvt Emply</fullName>
                    <default>true</default>
                    <label>Gvt Emply</label>
                </value>
                <value>
                    <fullName>Softare Emply</fullName>
                </value>
                <value>
                    <fullName>Doctor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EmailId__c</fullName>
        <label>Email Id</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Max_Amount_item__c</fullName>
        <label>Max Amount item</label>
        <summarizedField>Lineitems__c.Amount__c</summarizedField>
        <summaryForeignKey>Lineitems__c.Invoice__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Numberof_items__c</fullName>
        <label>Numberof items</label>
        <summaryForeignKey>Lineitems__c.Invoice__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Intialize</fullName>
                </value>
                <value>
                    <fullName>Approve</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Check__c</fullName>
        <formula>IF( CreatedDate  &gt;  Now() , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Amount_to_Pay__c</fullName>
        <label>Total Amount to Pay</label>
        <summarizedField>Lineitems__c.Amoun_to_pay__c</summarizedField>
        <summaryForeignKey>Lineitems__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Quantity__c</fullName>
        <label>Total Quantity</label>
        <summarizedField>Lineitems__c.quantity__c</summarizedField>
        <summaryForeignKey>Lineitems__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>I-{000}</displayFormat>
        <label>Invoice Num</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>